# munzala

./: .envrc  .gitignore  .gitmodules  .tmuxinator.yml  BUILD  COPY  Makefile  README.md  Setup.hs  WORKSPACE  bazel-bin  bazel-code  bazel-out  bazel-testlogs  build.sh  default.nix  deps.bzl  external.nix  munzala.cabal  release.nix  shell.nix  util.bzl
.dependabot/: config.yml
.github/: dependabot.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
ci/: build-unix.yml  dev-env-install.sh  dev-env-push.py
dev-env/etc/: nix.conf
dev-env/git-hooks/: hook-wrapper  pre-commit  pre-push
dev-env/lib/: de-base-profile  de-common  de-dump-profile  de-exec-nix-bin-tool  de-exec-nix-tool  ensure-nix
docs/: docker.md  gdpr.md  infra-naming-conventions.md  kafka.md  networking.plantuml  observability.md  security.md  source-code-formatting.md  vault.md
infra/: .gitignore  README.md  init-variables.tf.sh  initialize.tf  variables.tf
infra/base/: base.tfvars  init.sh  s3.tf  terraform.tf
infra/env-development/: init.sh  main.tf  outputs.tf  privacyhub.tf
infra/env-production/: init.sh  main.tf  privacyhub.tf
infra/env-staging/: .envrc  init.sh  main.tf  outputs.tf
nix/: BUILD.bazel  bazel-cc-toolchain.nix  bazel.nix  default.nix  ghc-8.6.5.nix  ghc.nix  nixpkgs.nix  packages.nix  release.nix  with-packages-wrapper.nix
nix/nixpkgs/: README.md
nix/overrides/: c2hs-0.28.6.nix  default.nix  ghc-8.6.3-binary.nix  haskell-src-exts-1.21.0.nix  haskell-src-meta-0.8.2.nix  hlint-2.1.15.nix  (+1 more)
src/: .stylish-haskell.yaml
terraform/: .envrc  variables.tf
(+59 files in other folders)
