cabal-version:       2.4

name:                munzala
version:             0.1.0.0
license:             AGPL-3.0-or-later
license-file:        LICENSE
author:              Geoffrey Huntley
maintainer:          ghuntley@ghuntley.com

library
  build-depends:       base ^>=4.12.0.0
                     , lens == 4.*
  hs-source-dirs:      src/lib
  default-language:    Haskell2010
  exposed-modules:     Demo

executable munzala
  main-is:          Main.hs
  hs-source-dirs:   src/main
  build-depends:    base == 4.*
                  , munzala
  default-language: Haskell2010
